# ploke

./: '  .bacon-locations  .codex.convo_checkpoint  .gitignore  .gitmodules  .scratch  AGENTIC_SYSTEM_PLAN.md  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN_DOC_CHECKLIST.md  DESIGN_STATIC_DISPATCH.md  GPT_PROMPT.md  ID_REFACTOR_TRACKING.md  IMMEDIATE_NEXT_STEPS.md  IMPLEMENT_ERROR_HANDLING.md  LICENSE  PROJECT_STRUCTURE.md  PROPOSED_ARCH_V2.md  PROPOSED_ARCH_V3.md  PROPOSED_FILE_ARCH1.md  PROPOSED_FILE_ARCH1_changes.md  README.md  README_V2.md  RESTRUCTURE.md  TECH_DEBT.md  TODO.md  ]  agent_report.md  change_context.md  clippy.toml  cozo_db_hnsw.txt  cozo_db_release_07.txt  cozodb_docs_types.txt  exp01_crazydoc.md  file_editing_audit_report.md  gemini_plan.md  immediate_next_steps.md  install.sh  known_issues.md  (+14 more)
crates/ingest/ploke-embed/: AI_NOTES.md  Cargo.toml  README.md  embedding_test_survey.md  progress.md
crates/ingest/ploke-mbe/: Cargo.toml  README.md
crates/ingest/ploke-transform/: AI_NOTES.md  Cargo.toml  README.md
crates/ingest/syn_parser/: Cargo.toml  README.md  alt_plan_file_tracking.md  duplicate_import_diagnosis.md  palt_plan_file_tracking.V2.md  plan_file_tracking.md
crates/ingest/syn_parser_macros/: Cargo.toml
crates/ploke-core/: Cargo.toml
crates/ploke-core/src/: arc_str.rs  compilation_unit.rs  embedding_set.rs  embedding_types.rs  embeddings.rs  file_hash.rs  graph.rs  io_types.rs  lib.rs  rag_types.rs  tool_descriptions.rs  tool_types.rs  workspace.rs  workspace_glob.rs
crates/ploke-core/tool_text/: apply_code_edit.md  cargo.md  code_item_edges.md  code_item_lookup.md  create_file.md  insert_rust_item.md  list_dir.md  non_semantic_patch.md  read_file.md  request_code_context.md
crates/ploke-db/: AI_NOTES.md  COZO_HNSW.md  Cargo.toml  README.md  coverage.md
crates/ploke-db/benches/: resolver_bench.rs
crates/ploke-db/docs/: agent_observability_impl_log.md  implementation-log-008.md  implementation-log-009.md  m1_readiness_report.md  review-19-08-2025.md  technical_debt.md
crates/ploke-db/src/: database.rs  embedding.rs  error.rs  helpers.rs  index.rs  lib.rs  multi_embedding_experiment.rs  observability.rs  query.rs
crates/ploke-db/tests/: callsite_logging_tests.rs  database_init_tests.rs  database_tests.rs  debug_obsv.rs  mod.rs  observability_tests.rs  test_helpers.rs  test_queries.rs
crates/ploke-error/: Cargo.toml
crates/ploke-error/docs/: ERROR_HANDLING_CRITERIA_AND_REASONING.md  REVIEW_AND_PLAN.md  V2_PLAN.md  V3_BEFORE_AFTER_EXAMPLES.md  V3_PLAN.md  V3_STATUS_REPORT.md
crates/ploke-error/src/: context.rs  diagnostic.rs  domain.rs  fatal.rs  internal.rs  lib.rs  policy.rs  pretty.rs  result_ext.rs  severity.rs  warning.rs
crates/ploke-eval/: Cargo.toml  README.md
crates/ploke-eval/src/: branch_evaluation.rs  campaign.rs  cli.rs  closure.rs  intervention_issue_aggregate.rs  layout.rs  lib.rs  loop_graph.rs  main.rs  model_registry.rs  msb.rs  operational_metrics.rs  protocol_aggregate.rs  protocol_artifacts.rs  protocol_report.rs  protocol_triage_report.rs  provider_prefs.rs  record.rs  registry.rs  run_history.rs  run_registry.rs  runner.rs  selection.rs  spec.rs  target_registry.rs  tracing_setup.rs
crates/ploke-eval/tests/: introspection_integration.rs  setup_phase_integration.rs  test_introspection.rs
crates/ploke-io/: AGENT_PLANNING.md  AI_NOTES.md  Cargo.toml  README.md  full_plan.md  test_coverage.md  todo_temp.md
crates/ploke-io/docs/: architecture_boundary.md  error_report_E0597_mutex_guard.md  feature_preconditions.md  implementation-log-000.md  implementation-log-001.md  implementation-log-002.md  implementation-log-003.md  implementation-log-004.md  implementation-log-005.md  implementation-log-006.md  implementation-log-007.md  implementation-log-008.md  implementation-log-009.md  implementation-log-010.md  implementation-log-011.md  implementation-log-012.md  implementation-log-013.md  implementation-log-014.md  implementation-log-015.md  implementation-log-016.md  implementation-log-017.md  implementation-log-018.md  production_decisions_report.md  production_plan.md  production_readiness_report.md  progress.md  refactor_strategy.md  test_coverage_addendum.md  todo_temp.md
crates/ploke-io/src/: actor.rs  builder.rs  create.rs  errors.rs  handle.rs  lib.rs  path_policy.rs  read.rs  scan.rs  tests_skeleton.rs  watcher.rs  write.rs  write_tests.rs
crates/ploke-llm/: Cargo.toml
crates/ploke-llm/src/: error.rs  lib.rs  llm-error.rs  wire.rs
crates/ploke-protocol/: Cargo.toml  README.md
crates/ploke-protocol/src/: core.rs  lib.rs  llm.rs  procedure.rs  step.rs
crates/ploke-rag/: CONCISE_SUMMARY_FOR_GPT5.md  Cargo.toml  README.md  plans.md  research.md
crates/ploke-rag/docs/: CODE_REVIEW.md  FIXTURE_CONFIGURATION.md  IMPLEMENTATION_NOTES.md  TUI_INTEGRATION_MIN.md  bm25_notes.md  sota_v2.md
crates/ploke-rag/reviews/: point2_context_assembly_review.md
crates/ploke-rag/src/: error.rs  lib.rs
crates/ploke-rag/tests/: integration_tests.rs
crates/ploke-tui/: AGENTS.md  Cargo.toml  INDEXING_FREEZE_INVESTIGATION.md  LLM2-REFactor-Progress-Plan.md  README.md  SYSTEM_STATE_RELIABILITY_PLAN.md  TODO.md  conversation-render-report.md  debug-log-12-15.md  tentative_plan.md
crates/ploke-tui/ai_temp_data/: endpoint_qwen3-30b-a3b-thinking-2507_1756583040.json  endpoint_qwen3-30b-a3b-thinking-2507_1756583040_stats.json  endpoint_qwen3-30b-a3b-thinking-2507_1756583040_stats.txt  models_all_raw.json  models_all_raw_stats.json  models_all_raw_stats.txt  test_vis.md  (+2 more)
crates/ploke-ty-mcp/: Cargo.toml  MCP_COMPARISON.md  PLAN.md
crates/ploke-ui/: Cargo.toml  README.md
crates/syn_parser/: Cargo.toml  README.md
crates/test-utils/: Cargo.toml
xtask/: Cargo.toml  README.md
xtask/src/: cli.rs  context.rs  error.rs  executor.rs  lib.rs  main.rs  profile_ingest.rs  test_harness.rs  usage.rs
xtask/tests/: cli_invariant_tests.rs  command_acceptance_db.rs  command_acceptance_parse.rs  context_tests.rs  db_commands.rs  error_tests.rs  executor_tests.rs  parse_commands.rs  parse_debug_commands.rs  test_matrix.md
(+2703 files in other folders)
