[workspace]
exclude = [
    "ai_workflow",
    "tests/fixture_crates/subdir/duplicate_name_fixture_3",
    "tests/fixture_crates/duplicate_name_fixture_2",
    "tests/fixture_crates/fixture_conflation",
    "tests/fixture_crates/fixture_attributes",
    "tests/fixture_crates/duplicate_name_fixture_1",
    "tests/fixture_crates/example_crate",
    "tests/fixture_crates/file_dir_detection",
    "tests/fixture_crates/fixture_cyclic_types",
    "tests/fixture_crates/fixture_edge_cases",
    "tests/fixture_crates/fixture_generics",
    "tests/fixture_crates/fixture_macros",
    "tests/fixture_crates/fixture_tracking_hash",
    "tests/fixture_crates/fixture_types",
    "tests/fixture_crates/simple_crate",
    "tests/fixture_crates/fixture_nodes",
    "tests/fixture_crates/fixture_path_resolution",
    "tests/fixture_crates/fixture_spp_edge_cases",
    "tests/fixture_crates/fixture_spp_edge_cases_no_cfg",
    "fixture_test_crate",
]
resolver = "2"
members = [
    "crates/ingest/syn_parser",
    "crates/ingest/ploke-transform",
    "crates/ingest/ploke-embed",
    "crates/ploke-db",
    "crates/common",
    "crates/test-utils",
    "crates/ploke-core",
    "proc_macros/syn_parser/syn_parser_macros",
    "proc_macros/syn_parser/ploke-test-macros",
    "proc_macros/syn_parser/derive_test_helpers",
    "crates/ploke-error",
    "crates/ploke-tui", "crates/ploke-rag", "crates/ploke-io",
    # Add more modules as needed
]

[workspace.dependencies]
# Parsing and code generation
syn = { version = "2.0.100", features = ["full", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
proc-macro-error = "1.0"                                       # For better error reporting in derive

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"

# Concurrency and parallelism
rayon = "1.10.0"
flume = "0.11.1"
tokio = { version = "1.44.1", features = ["full"] }
dashmap = "6.1.0"

# Data structures and algorithms
cozo = "0.7.6"
uuid = { version = "1.16.0", features = ["v5", "v4", "atomic"] }

# Error handling
thiserror = "2"

# Debugging
log = "0.4"
colored = "3.0"

# Convenience
itertools = "0.14"

# Ploke Core Types
ploke-core = { path = "crates/ploke-core", version = "0.1.0" }

[workspace.metadata]
fixtures_dir = "tests/fixtures"
