[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"
ploke-db = { path = "../crates/ploke-db", features = ["multi_embedding_schema"] }
ploke-common = { path = "../crates/common" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
