[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
chrono = { workspace = true }
ploke-llm = { path = "../crates/ploke-llm" }
