[package]
name = "ploke-core"
version = "0.1.0"
edition = "2021"
description = "Core data types and constants for the ploke project"
authors = ["Your Name <your.email@example.com>"]                    # Please update author info

[dependencies]
# Enable these core dependencies only when the uuid_ids feature is active
uuid = { workspace = true, features = ["v5", "serde"] }
serde = { workspace = true, features = ["derive"] }
proc-macro2 = { workspace = true, features = ["span-locations"] }
thiserror = { workspace = true }
cozo = { workspace = true }
lazy_static = { workspace = true }
blake3 = "1.8"
rayon = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }


[features]
default = []
ghost_data_graphs = []
parallel-hash = ["blake3/rayon"]
read-tokio = ["tokio/io-util", "tokio/fs"]
parallel-walk = ["dep:rayon"]              # only if you actually use rayon APIs
json = ["dep:serde_json"]
# Feature flag for the UUID refactor

[dev-dependencies]
serde_json = { workspace = true }
