[package]
name = "ploke-db"
version = "0.1.0"
edition = "2021"

[dependencies]
cozo = { workspace = true }
ploke-transform = { path = "../ingest/ploke-transform" }
ploke-core = { path = "../ploke-core" }
syn_parser = { path = "../ingest/syn_parser" }
serde = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
uuid = { workspace = true }
clap = { version = "4.5.17", features = ["derive"] }

# error handling
ploke-error = { path = "../ploke-error" }
thiserror = "1.0"

# pre-caching the schema fields for queries
lazy_static = "1.4.0" # Added lazy_static

# concurrency
tokio = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = "0.5.15"

# logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# bm 25
bm25 = "2.3.1"

[dev-dependencies]
ploke-test-utils = { path = "../test-utils" }
tokio-test = "0.4.4"
criterion = "0.7"

[features]
defaults = [
    "multi_embedding_db",
    "multi_embedding_schema",
    "multi_embedding_runtime",
    "multi_embedding_release",
    "multi_embedding_experiment",
]
type_bearing_ids = []
# Enables schema-only helpers for multi-embedding relations.
multi_embedding_schema = ["ploke-transform/multi_embedding_schema"]
# Turns on dual-write/dual-read helpers plus adapter coverage.
multi_embedding_db = [
    "multi_embedding_schema",
    "ploke-transform/multi_embedding_db",
]
# Pulls runtime-facing adapters/tests into the build.
multi_embedding_runtime = [
    "multi_embedding_db",
    "ploke-transform/multi_embedding_runtime",
]
# Bundles schema/db/runtime for end-to-end soak or release builds.
multi_embedding_release = [
    "multi_embedding_runtime",
    "ploke-transform/multi_embedding_release",
]
# Keeps kill-switch plumbing available even when compile-time flags are on.
multi_embedding_kill_switch = []
# Temporary alias so legacy commands referencing `multi_embedding_experiment` keep working.
multi_embedding_experiment = ["multi_embedding_schema"]
