[package]
name = "ploke-db"
version = "0.1.0"
edition = "2021"

[dependencies]
cozo = { workspace = true }
# ploke-transform = { path = "../ingest/ploke-transform" }
# Making this not use default flag multi_embedding_schema, which is in
# ploke-transform's default flags so I can get easier access to the linting of
# rust-analyzer for the new feature
ploke-transform = { path = "../ingest/ploke-transform", default-features = false, features = [
] }
ploke-core = { path = "../ploke-core" }
syn_parser = { path = "../ingest/syn_parser" }
serde = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
uuid = { workspace = true }
clap = { version = "4.5.17", features = ["derive"] }

# error handling
ploke-error = { path = "../ploke-error" }
thiserror = "1.0"

# pre-caching the schema fields for queries
lazy_static = "1.4.0" # Added lazy_static

# concurrency
tokio = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = "0.5.15"

# logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# bm 25
bm25 = "2.3.1"

[dev-dependencies]
ploke-test-utils = { path = "../test-utils" }
tokio-test = "0.4.4"
criterion = "0.7"

[features]
defaults = ["multi_embedding_db"]
type_bearing_ids = []
multi_embedding_db = ["ploke-transform/multi_embedding_schema"]
