[package]
name = "ploke-error"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
uuid = { workspace = true }

[features]
default = []
tracing = ["dep:tracing"]
diagnostic = []
serde = []
smartstring = []
proc-span = []
backtrace-default = []

[dependencies.tracing]
version = "0.1"
optional = true
