[package]
name = "ploke-eval"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "Internal non-release-facing evaluation and artifact inspection tooling for ploke"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cozo = { workspace = true }
crossterm = { version = "0.29", features = ["serde"] }
dirs = "6.0"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
ploke-db = { workspace = true }
ploke-embed = { workspace = true }
ploke-core = { workspace = true }
ploke-llm = { path = "../ploke-llm" }
ploke-protocol = { workspace = true }
ploke-tui = { path = "../ploke-tui", features = ["test_harness"] }
tracing = {workspace = true}
tracing-appender = "0.2"
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tempfile = "3.8"
uuid = { workspace = true, features = ["serde"] }
sha2 = "0.10"
regex = "1"
flate2 = "1.0"
sparse-merkle-tree = "0.6.1"

[dev-dependencies]
ploke-test-utils = { workspace = true }
syn_parser = { workspace = true }
ploke-error = { workspace = true }

[features]
default = ["convert_keyword_2015"]
convert_keyword_2015 = ["ploke-tui/convert_keyword_2015"]
qwen_reasoning_fix = ["ploke-llm/qwen_reasoning_fix"]

[[bin]]
name = "ploke-eval"
path = "src/main.rs"
