[package]
name = "ploke-io"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"
rlimit = "0.10"
ploke-error = { path = "../ploke-error" }
ploke-core = { path = "../ploke-core" }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
uuid = { workspace = true, features = ["v5", "serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = "0.2"
notify = { version = "6", optional = true }

ploke-common = { path = "../common" }
syn_parser = { path = "../ingest/syn_parser" }
itertools = { workspace = true }


[dev-dependencies]
ploke-db = { path = "../ploke-db" }
ploke-test-utils = { path = "../test-utils" }
tempfile = "3.10.1"
mockall = "0.12"

[features]
default = []
watcher = ["notify"]
# testing = ["ploke-test-utils/test_setup"]
