[package]
name = "ploke-io"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"
rlimit = "0.10"
ploke-error = { path = "../ploke-error" }
ploke-core = { path = "../ploke-core" }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
uuid = { workspace = true, features = ["v5", "serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = "0.2"
notify = { version = "6", optional = true }

ploke-common = { path = "../common" }
syn_parser = { path = "../ingest/syn_parser" }
itertools = { workspace = true }
dashmap = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
ploke-db = { path = "../ploke-db", features = ["multi_embedding_db"] }
ploke-test-utils = { path = "../test-utils" }
tempfile = "3.10.1"
mockall = "0.12"

[features]
default = ["multi_embedding_io"]
watcher = ["notify"]
multi_embedding_io = [
    "ploke-db/multi_embedding_db",
    "ploke-test-utils/multi_embedding_test",
]
# testing = ["ploke-test-utils/test_setup"]
