[package]
name = "ploke-protocol"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
ploke-llm = { path = "../ploke-llm" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
fxhash = { workspace = true }
