[package]
name = "ploke-rag"
version = "0.1.0"
edition = "2021"

[dependencies]
ploke-db = { path = "../ploke-db" }
ploke-embed = { path = "../ingest/ploke-embed" }
ploke-error = { path = "../ploke-error" }
ploke-core = { path = "../ploke-core" }
ploke-io = { path = "../ploke-io" }
serde = { workspace = true }

itertools = { workspace = true }

thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
ploke-test-utils = { path = "../test-utils" }
lazy_static = "1.5.0"
criterion = { version = "0.7", features = ["async_tokio"] }

[features]
multi_embedding_schema = [
    "ploke-db/multi_embedding_schema",
    "ploke-embed/multi_embedding_schema",
]
multi_embedding_db = [
    "multi_embedding_schema",
    "ploke-db/multi_embedding_db",
    "ploke-embed/multi_embedding_db",
]
multi_embedding_runtime = [
    "multi_embedding_db",
    "ploke-embed/multi_embedding_runtime",
]
multi_embedding_release = ["multi_embedding_runtime"]
multi_embedding_kill_switch = []
