[package]
name = "ploke-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
# ui
ratatui = "0.29"
# concurrency
crossterm = { version = "0.29", features = ["event-stream", "serde"] }
tokio = { workspace = true }                                           # "full" for simplicity, you can narrow down later
tokio-utils = "0.1"
flume = { workspace = true }
num_cpus = "1.0"
# network
reqwest = { version = "0.11", features = ["json"] }
# common
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
# config
toml = "0.8"
dirs = "5.0"

# user-facing error handling
color-eyre = "0.6"

# integrate workspace error handling
ploke-error = { path = "../ploke-error" }
thiserror = "1.0"
log = { workspace = true }

# conversation history branching
uuid = { workspace = true }

futures = "0.3" # For .fuse() on streams
