[package]
name = "ploke-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
# parser
syn_parser = { path = "../ingest/syn_parser" }
ploke-transform = { path = "../ingest/ploke-transform" }

# ui
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream", "serde"] }
textwrap = "0.16"

# concurrency
tokio = { workspace = true } # "full" for simplicity, you can narrow down later
tokio-utils = "0.1"
flume = { workspace = true }
num_cpus = "1.0"
nonzero_ext = "0.3"

# network
reqwest = { version = "0.12", features = ["json"] }
governor = "0.10"

# embeddings
ploke-embed = { path = "../ingest/ploke-embed" }
ploke-io = { path = "../ploke-io" }
ploke-db = { path = "../ploke-db" }

# common
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }

# config
toml = "0.8"
dirs = "5.0"
config = { version = "0.14", features = ["toml"] }
dotenvy = "0.15"

# file io
tempfile = "3.8"

# user-facing error handling
color-eyre = "0.6"

# integrate workspace error handling
ploke-error = { path = "../ploke-error" }
thiserror = "1.0"
log = { workspace = true }

# concurrency logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
chrono = "0.4"

# conversation history branching
uuid = { workspace = true }

futures = "0.3" # For .fuse() on streams

# global state                                                                                  
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.4"
wiremock = "0.5.14"
tokio-test = "0.4"
test-context = "0.1"
fake = "4.3.0"
cozo = { workspace = true }
