[package]
name = "ploke-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
# parser
syn_parser = { path = "../ingest/syn_parser" }
ploke-transform = { path = "../ingest/ploke-transform" }

# convenience
itertools = { workspace = true }

# ui
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream", "serde"] }
textwrap = "0.16"
similar = "2"
unicode-width = "0.1"

# concurrency
tokio = { workspace = true } # "full" for simplicity, you can narrow down later
tokio-utils = "0.1"
tokio-stream = "0.1"
flume = { workspace = true }
num_cpus = "1.0"
nonzero_ext = "0.3"

# network
reqwest = { version = "0.12", features = ["json"] }
url = { version = "2.5.7", features = ["serde"] }
governor = "0.10"

# embeddings
ploke-embed = { path = "../ingest/ploke-embed" }
ploke-io = { path = "../ploke-io", features = ["watcher"] }
ploke-db = { path = "../ploke-db" }
ploke-rag = { path = "../ploke-rag" }

# seraialize/deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# common
ploke-core = { path = "../ploke-core" }
sha2 = "0.10"

# tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
cozo = { workspace = true }

# config
toml = "0.9"
dirs = "6.0"
config = { version = "0.15", features = ["toml"] }
dotenvy = "0.15"

# file io
tempfile = "3.8"
# file io + llm code edits
mpatch = { workspace = true }

# user-facing error handling
color-eyre = "0.6"

# integrate workspace error handling
ploke-error = { path = "../ploke-error" }
thiserror = { workspace = true }
log = { workspace = true }

# concurrency logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
chrono = "0.4"

# conversation history branching
uuid = { workspace = true }

futures = "0.3" # For .fuse() on streams

lazy_static = { workspace = true } # Added lazy_static

fxhash = { workspace = true }

# string interning
lasso = { workspace = true }

# global state
once_cell = "1.19"
ploke-test-utils = { path = "../test-utils" }

[dev-dependencies]
tempfile = "3.4"
tokio-test = "0.4"
test-context = "0.4"
fake = "4.3.0"
cozo = { workspace = true }
rand = "0.9"
insta = { version = "1.39.0", features = ["redactions"] }
regex = "1"
criterion = { version = "0.7", features = ["async_tokio"] }
quote = { workspace = true }
syn = { workspace = true }
smol_str = "0.3.2"
arrayvec = "0.7"
percent-encoding = "2"

[features]
default = ["test_harness", "multi_embedding_ui", "live_api_tests"]
flakey_test = ["live_api_tests"]
# tests that wait a few seconds for a reply
long_test = ["live_api_tests"]
multi_embedding_ui = [
    "ploke-embed/multi_embedding_embedder",
    "ploke-transform/multi_embedding_schema",
    "ploke-test-utils/multi_embedding_test",
    "ploke-db/multi_embedding_db",
    "ploke-rag/multi_embedding_rag",
]
llm_refactor = []
live_api_tests = []
test_harness = []
json_visitor = []
xxx = []

[[bench]]
name = "ui_measure"
harness = false

[[bench]]
name = "model_id"
harness = false

[[bench]]
name = "model_id_tokio"
harness = false
