[package]
name = "ploke-ty-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.3", features = ["client", "transport-child-process"] }
tokio = { workspace = true }
anyhow = "1.0"
serde_json = { workspace = true }
itertools = { workspace = true }
dashmap = "6"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { workspace = true }
rand = "0.8"
thiserror = { workspace = true }
