[package]
name = "ploke-ui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ploke-ui"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
egui = "0.31"
cozo = { workspace = true, features = ["embedded"] }
ploke-core = { path = "../ploke-core" }
ploke-transform = { path = "../ingest/ploke-transform" }
thiserror = { workspace = true }
rfd = "0.12"                                             # For file dialogs
# logging
env_logger = "0.11"
log = { workspace = true }
colored = { workspace = true }

crossbeam = "0.8" # For thread communication
