[package]
name = "ploke-ui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ploke-ui"
path = "src/main.rs"

[dependencies]
# core ui elements
eframe = "0.31"
egui = "0.31"

# database integration
cozo = { workspace = true }

# core types
ploke-core = { path = "../ploke-core" }

# parsing and code graph
syn_parser = { path = "../ingest/syn_parser" }

# transform into database from parser
ploke-transform = { path = "../ingest/ploke-transform" }

# database wrapper and query methods + query builder
ploke-db = { path = "../ploke-db" }

rfd = "0.12" # For file dialogs

# error handling
ploke-error = { path = "../ploke-error" }
thiserror = { workspace = true }

# logging
env_logger = "0.11"
log = { workspace = true }
colored = { workspace = true }

crossbeam = "0.8" # For thread communication
