[package]
name = "ploke-ui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ploke-ui"
path = "src/main.rs"

[dependencies]
# core ui elements
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"

# database integration
cozo = { workspace = true }
ploke-db = { path = "../ploke-db" }
ploke-transform = { path = "../ingest/ploke-transform" }

# core types
ploke-core = { path = "../ploke-core" }

# parsing and code graph
syn_parser = { path = "../ingest/syn_parser" }

# persistence
serde = { workspace = true }

rfd = "0.12" # For file dialogs

# error handling
ploke-error = { path = "../ploke-error" }
thiserror = { workspace = true }

# logging
env_logger = "0.11"
log = { workspace = true }
colored = { workspace = true }

# concurrency
flume = { workspace = true }

[features]
default = ["strip_table"]
multithreaded = []
serde = []
strip_table = []
