[package]
name = "ploke-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ploke-common = { path = "../common" }
# syn_parser is now a required dependency
syn_parser = { path = "../ingest/syn_parser" }
# Core types are now always needed
ploke-core = { path = "../ploke-core" } # Needed for Uuid types if test-utils uses them directly
# common error types for workspace
ploke-error = { path = "../ploke-error" }

ploke-transform = { path = "../ingest/ploke-transform" }

cozo = { workspace = true }

tokio = { workspace = true }

uuid = { workspace = true, features = ["v5", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
log = { workspace = true }
ploke-db = { path = "../ploke-db" }


tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
chrono = "0.4"
sha2 = "0.10"
walkdir = "2.5"

[dev-dependencies]

[features]
default = ["test_setup"]
test_setup = []
multi_embedding_schema = ["ploke-db/multi_embedding_schema"]
multi_embedding_db = ["multi_embedding_schema", "ploke-db/multi_embedding_db"]
multi_embedding_runtime = ["multi_embedding_db", "ploke-db/multi_embedding_runtime"]
# Feature flag for the UUID refactor in test-utils (REMOVED)
